Fixed textarea and container wrap

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
     background: #ffffff;
 }
 
+textarea {
+    width: 75%;
+}
+
 .configuration {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -20,6 +24,7 @@ body {
     margin: auto auto auto 1%;
     padding: 0.5%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     width: 30%;
     justify-content: center;
